--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Pt Sans";
-  src: url(../fonts/ptsans-400.woff2);
+  src: url("../fonts/ptsans-400.woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: "Pt Sans";
-  src: url(../fonts/ptsans-700.woff2);
+  src: url("../fonts/ptsans-700.woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
   font-family: "Pt Sans";
-  src: url(../fonts/ptsans-400.woff2);
+  src: url("../fonts/ptsans-400.woff2");
   font-weight: 400;
   font-style: italic;
   font-display: swap;
@@ -24,7 +24,7 @@
 
 @font-face {
   font-family: "Pt Sans";
-  src: url(../fonts/ptsans-700.woff2);
+  src: url("../fonts/ptsans-700.woff2");
   font-weight: 700;
   font-style: italic;
   font-display: swap;
@@ -162,6 +162,7 @@ img {
   display: flex;
   justify-content: space-between;
   width: 100%;
+  margin-left: 26px;
 }
 
 .navigation-list {
@@ -204,7 +205,7 @@ img {
 }
 
 .navigation-link-search {
-  background: url(../images/icons/search.svg) center no-repeat;
+  background: url("../images/icons/search.svg") center no-repeat;
   padding: 20px 13px;
   display: block;
   width: 19px;
@@ -212,7 +213,7 @@ img {
 }
 
 .navigation-link-selected {
-  background: url(../images/icons/heart.svg) center no-repeat;
+  background: url("../images/icons/heart.svg") center no-repeat;
   padding: 20px 13px;
   margin-right: 20px;
   position: relative;
@@ -243,16 +244,17 @@ img {
 
 /* end header */
 
-/* main index*/
+/* main index */
 .main-index {
   flex-grow: 1;
 }
 
 .slogan {
-  background: url(../images/index-bacground-bow.svg) bottom no-repeat,
-    url(../images/index-bacground.jpg) center / cover no-repeat rgba(131, 179, 211, 0.2);
+  background:
+    url("../images/index-bacground-bow.svg") bottom no-repeat,
+    url("../images/index-bacground.jpg") center / cover no-repeat rgba(131, 179, 211, 0.2);
   text-align: center;
-  padding-top: 53px;
+  padding-top: 51px;
   padding-bottom: 80px;
 }
 
@@ -277,7 +279,7 @@ img {
   font-size: 22px;
   line-height: 26px;
   text-align: center;
-  margin: 0 0 20px 0;
+  margin: 0 0 20px;
 }
 
 .advantages {
@@ -292,7 +294,7 @@ img {
   line-height: 28px;
   text-transform: uppercase;
   text-align: center;
-  margin: 0 0 30px 0;
+  margin: 0 0 30px;
   color: #000000;
   max-width: 172px;
 }
@@ -381,7 +383,7 @@ img {
   line-height: 28px;
   text-transform: uppercase;
   color: #000000;
-  margin: 0 0 24px 0;
+  margin: 0 0 24px;
 }
 
 .relax-description {
@@ -418,10 +420,10 @@ img {
 }
 
 .mailing {
-  background: #82b3d3 url(../images/bacground-mailing.jpg) center / cover no-repeat;
+  background: #82b3d3 url("../images/bacground-mailing.jpg") center / cover no-repeat;
   color: #ffffff;
   text-align: center;
-  padding: 96px 258px 104px 258px;
+  padding: 96px 258px 104px;
 }
 
 .mailing-title {
@@ -464,7 +466,6 @@ img {
 
 .mailing-input:invalid {
   outline: 2px solid #ff5757;
-  ;
 }
 
 .mailing-input:invalid:placeholder-shown {
@@ -481,9 +482,9 @@ img {
 /* catalog */
 
 .hotel {
-  background: rgba(131, 179, 211, 0.2) url(../images/catalog-background.jpg) center / cover no-repeat;
+  background: rgba(131, 179, 211, 0.2) url("../images/catalog-background.jpg") center / cover no-repeat;
   color: #ffffff;
-  padding: 35px 70px 70px 70px;
+  padding: 35px 70px 70px;
 }
 
 .hotel-title {
@@ -495,7 +496,7 @@ img {
 }
 
 .home {
-  background: url(../images/icons/home.svg) center no-repeat;
+  background: url("../images/icons/home.svg") center no-repeat;
   width: 12px;
   height: 12px;
   display: block;
@@ -511,7 +512,7 @@ img {
 }
 
 .breadcrumbs-item::before {
-  content: url(../images/icons/breadcrumbs-arrow.svg);
+  content: url("../images/icons/breadcrumbs-arrow.svg");
   margin-left: 10px;
   margin-right: 4px;
 }
@@ -564,6 +565,7 @@ img {
 
 .catalog-filter-price {
   width: 288px;
+  margin-right: 70px;
 }
 
 .catalog-filter-infrastructure {
@@ -574,10 +576,6 @@ img {
   margin-right: 150px;
 }
 
-.catalog-filter-price {
-  margin-right: 70px;
-}
-
 .control {
   display: flex;
 }
@@ -586,7 +584,7 @@ img {
   opacity: 0.6;
 }
 
-.control:focus .control-mark {
+.control-input:focus + .control-mark{
   border: 3px solid #83b3d3;
 }
 
@@ -600,15 +598,15 @@ img {
   box-sizing: border-box;
 }
 
-.control-input[type=checkbox]:checked + .control-mark {
-  background: #ffffff url(../images/icons/control-checkbox.svg) no-repeat center;
+.control-input[type="checkbox"]:checked + .control-mark {
+  background: #ffffff url("../images/icons/control-checkbox.svg") no-repeat center;
 }
 
-.control-input[type=radio] + .control-mark {
+.control-input[type="radio"] + .control-mark {
   border-radius: 50%;
 }
 
-.control-input[type=radio]:checked + .control-mark::before {
+.control-input[type="radio"]:checked + .control-mark::before {
   content: "";
   width: 10px;
   height: 10px;
@@ -761,7 +759,7 @@ img {
   height: 49px;
   box-sizing: border-box;
   appearance: none;
-  background: url(../images/icons/arrow.svg) no-repeat 250px center;
+  background: url("../images/icons/arrow.svg") no-repeat 250px center;
 }
 
 .select-control:active,
@@ -782,7 +780,7 @@ img {
 .sort-lists {
   display: flex;
   align-items: center;
-  margin-left: 60px;
+  margin-left: 70px;
 }
 
 .sort-list:last-child {
@@ -792,11 +790,8 @@ img {
 .sort {
   border: 2px solid #e5e5e5;
   border-radius: 4px;
-  padding: 16px;
+  padding: 22px;
   margin-right: 8px;
-  display: block;
-  width: 16px;
-  height: 14px;
 }
 
 .sort:hover,
@@ -807,15 +802,15 @@ img {
 }
 
 .sort-cart {
-  background: url(../images/icons/variant=tile.svg) center no-repeat;
+  background: url("../images/icons/variant=tile.svg") center no-repeat;
 }
 
 .sort-slide {
-  background: url(../images/icons/variant-slideshow.svg) center no-repeat;
+  background: url("../images/icons/variant-slideshow.svg") center no-repeat;
 }
 
 .sort-list {
-  background: url(../images/icons/variant-list.svg) center no-repeat;
+  background: url("../images/icons/variant-list.svg") center no-repeat;
 }
 
 .product-cards {
@@ -824,7 +819,6 @@ img {
   gap: 20px;
   padding-bottom: 40px;
   border-bottom: 1px solid #e5e5e5;
-  ;
 }
 
 .product-card {
@@ -883,7 +877,7 @@ img {
 }
 
 .rating-star {
-  background: url(../images/icons/star.svg) center no-repeat;
+  background: url("../images/icons/star.svg") center no-repeat;
   width: 22px;
   height: 18px;
 }
@@ -940,7 +934,6 @@ img {
 }
 
 
-
 .pagination-item-current,
 .pagination-item-current:hover,
 .pagination-item-current:focus,
@@ -992,7 +985,7 @@ img {
 }
 
 .button-social-vk {
-  mask: url(../images/icons/Social-Vk.svg) center no-repeat;
+  mask: url("../images/icons/Social-Vk.svg") center no-repeat;
   background: #83b3d3;
   display: block;
   width: 22px;
@@ -1001,7 +994,7 @@ img {
 }
 
 .button-social-telegram {
-  mask: url(../images/icons/Social-Telegram.svg) center no-repeat;
+  mask: url("../images/icons/Social-Telegram.svg") center no-repeat;
   background: #83b3d3;
   display: block;
   width: 22px;
@@ -1010,7 +1003,7 @@ img {
 }
 
 .button-social-youtube {
-  mask: url(../images/icons/Social-Youtube.svg) center no-repeat;
+  mask: url("../images/icons/Social-Youtube.svg") center no-repeat;
   background: #83b3d3;
   display: block;
   width: 22px;
@@ -1054,7 +1047,7 @@ img {
 }
 
 .logo-academy {
-  mask: url(../images/icons/brand-htmlacademy.svg) center no-repeat;
+  mask: url("../images/icons/brand-htmlacademy.svg") center no-repeat;
   background: #000000;
   width: 115px;
   height: 34px;
@@ -1107,7 +1100,7 @@ img {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
   border: none;
   cursor: pointer;
 }
@@ -1208,7 +1201,7 @@ img {
   width: 440px;
   height: 48px;
   box-sizing: border-box;
-  background: #f2f2f2 url(../images/icons/date.svg) no-repeat right 20px center;
+  background: #f2f2f2 url("../images/icons/date.svg") no-repeat right 20px center;
   appearance: none;
   font-family: "PT Sans", sans-serif;
   font-weight: 700;
@@ -1222,7 +1215,7 @@ img {
 }
 
 .input-date:focus,
-.input-date:focus-visible{
+.input-date:focus-visible {
   border: 3px solid #83b3d3;
 }
 
